--- a/thefox RWD/css/main.css
+++ b/thefox RWD/css/main.css
@@ -158,7 +158,7 @@ img {
 
 
 
-
+/*
 .features{
 	padding: 70px;
 }
@@ -318,7 +318,7 @@ ul.social-media {
 
 .social-media li.twitter {
 	background-color: #00B6F6;
-}
+}*/
 
 
 
