--- a/thefox/css/main.css
+++ b/thefox/css/main.css
@@ -1,279 +1,127 @@
-img {
-	display: block;
+#header{
+	background-color: RGBA(61, 40, 71, 0.7);
 }
 
-.container {
-	max-width: 1180px;
-	margin: 0 auto;
-}
-
-.clearfix {
-	clear: both;
-}
-
-
-#header {
-	position: fixed;
-	width: 100%;
-}
-
-#logo {
-	float: left;
-}
-
-#nav {
-	float: right;
-}
-
-#nav ul {
-	margin: 0;
-    line-height: 40px;
-    list-style-type: none;
-}
-
-#nav li {
-	float: left;
-}
-
-#nav a {
-	padding: 0 24px;
-	color: #fff;
-	text-decoration: none;
-	text-transform: capitalize;
-}
-
-
-.burger-logo img{
-	width: 30px;
-	height: 30px;
-	text-align:right;
-	float: right;
-	display: none;
-}
-
-
-.clearfix {
-	clear: both;
-}
-
-
-
-
-
-
-@media (max-width:540px){
-	#nav li{
-		display: none;
-	}
-} 
-
-@media (max-width:540px){
-	.burger-logo img{
-		display: block;
-	}
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.banner {
-	background-color: #1D3D57;
-	height: 100vh;
+.glyphicon.glyphicon-leaf{
 	color: white;
 }
+.pull-right {
+ padding-top:15px; 
+ color: white;
+}
 
-.banner-container {
+.pull-right li{
+ padding-right:3px; 
+}
+
+.pull-right a{
+ color: white;
+}
+
+#banner{
+	background-color:RGBA(61, 40, 71, 0.7);
+	width: 100vw;
+	height: 100vh;
+}
+#banner .container{
+	width: 100%;
+	background-color:RGBA(61, 40, 71, 0.9);
 	position: relative;
-	top: 50%;
-	background-color: rgba(0,0,0,.3);
+  top: 55%;
 }
 
-.banner-container > div {
-	float: left;
-}
-
-.banner-container .clearfix {
-	float: none;
-}
-
-.banner-container img {
-	width: 100%;
-	height: auto;
-}
-
-.banner .left, .banner .right {
-	width: 30%;
-    font-size: 120px;
-    font-weight: 100;
-    box-sizing: border-box;
-}
-
-.banner .left {
-	padding-left: 50px;
-}
-
-.banner .right {
-	text-align: right;
-	padding-right: 50px;
-}
-
-.banner .title {
-	padding: 30px 0;
-	width: 40%;
+.title-banner p{
 	text-align: center;
-    background-color: rgba(0,0,0,.6);
-    text-transform: uppercase;
-	letter-spacing: 2px;
+	color: white;
+	font-size:20px ;
+	letter-spacing: 0.5em;
+	margin: 0;
 }
 
-.banner .title h3 {
-	font-weight: 200;
-}
-
-.banner h3.subtitle {
-	font-size: 14px;
-}
-
-.banner .title h3:first-child {
-	margin-top: 0;
-}
-
-.banner .title h3:last-child {
-	margin-bottom: 0;
-}
-
-
-
-
-.features{
-	padding: 70px;
-}
-
-.feature {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
-	float: left;
-	padding-right: 40px;
-	padding-bottom: 40px;
-	width: 33.33333333333%;
-}
-
-.feature .title > img, .feature .title > h3 {
-	float: left;
-}
-
-.feature .title img {
-	margin-right: 20px;
-}
-
-.feature .title h3 {
-    margin: 0;
-    line-height: 45px;
-    text-transform: uppercase;
-}
-.clearfix{
-	clear: both;
-}
-
-.portfolio-container{
-	background-color: #aaa;
+.title-banner h1{
 	text-align: center;
-	padding: 20px;
+	color: #01FFE5;
+	letter-spacing: 1.5em;
+	margin-bottom: 10px;
+	font-size: 50px;
 }
 
-.portfolio-container img{
-	margin: 0 ,auto;
+.title-banner {
+	background-color:RGBA(61, 40, 71, 1.00);
+  margin: auto;
+
+}
+section{
+	margin-top:50px;
+	margin-bottom: 50px;
+}
+
+.features h3{
 	display: inline;
-	border-radius: 50%
 }
 
-.filter li {
-	float:left;
-	color:white;
-	padding-right: 50px;
-  list-style-type: none;
-  padding-left: 100px;
+.banner{
+	text-align: center;
+	color: white;
+	background-color:#1B263A;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
-.filter li a {
-	text-decoration: none;
+.banner p{
+	padding-top:15px;
+	padding-bottom:15px; 
 }
 
-.clearfix{
-	clear:both;
+.pull-center a{
+	color: white;
+	border: ridge;
+	padding: 5px;
 }
 
+#pics .row{
+	margin-right:0px;
+	margin-left:0px; 
+}
 
-.col-3 img,.col-6 img,.col-12 img{
+.col-xs-3 , .col-xs-6 , .col-xs-12{
+	padding: 0px;
+}
 
+.col-xs-3 img , .col-xs-6 img , .col-xs-12 img{
 	width: 100%;
 	height: auto;
 }
 
-.col-3{
-	width: 25%;
-	float: left;
+.loadmore .container a{
+	text-align: center;
+	color: white;
+	border: ridge;
+	padding: 10px;
+	background-color: #1FDAB5;
 }
 
-.col-6{
-	width: 50%;
-	float: left;
-}
-
-
-.col-12{
-	width: 100%;
-	float: left;
-}
-
-.clearfix{
-	clear:both;
+.loadmore .container {
+	padding-top:70px;
+	padding-bottom:70px; 
+	text-align: center;
 }
 
 .loadmore{
-	background-color: black;
-  padding: 50px;
-}
-
-.loadmore p{
-	  text-align: center;
-    color: white;
-    padding: 20px;
-    background-color: #28DAC0;
-    margin: 0 auto;
-    position: relative;
-    width: 100px;
+	background-color: #181E3A;
 }
 
 .now{
-    background-color: #19AEE0;
-    padding: 50px;
-    margin: 0 auto;
+  background-color: #19AEE0;
+  padding: 50px;
+  margin: 0 auto;
 }
 
 .now p{
-    color: white;
-    margin: 0 auto;
-    position: absolute;
+  color: white;
+  margin: 0 auto;
+  position: absolute;
+  font-size: 20px;
 }
 
 .button{
@@ -282,10 +130,6 @@ img {
   border-style: solid;
   border-color: white;
   padding: 0px 20px;
-}
-
-.clearfix{
-	clear:both;
 }
 
 .skill {
@@ -306,246 +150,73 @@ float: left;
 position: 10px
 }
 
+.scontainer p{
+font-size: 20px;
+}
 
-
-.clearfix{
-	clear:both;
+.scontainer a{
+	padding: 5px;
+  background-color: #A6B5BF;
+  color: white;
+  margin-left: 50px;
 }
 
 .skill li{
 	list-style-type: none;
-	padding: 15px ;
+	padding: 10px ;
+	margin-bottom:5px; 
 }
 
-.skill li:nth-child(3){
+.skill li:nth-child(1){
+	font-size: 20px;
+	margin-top: 5px;
+}
+
+.skill li:nth-child(2){
 	background-color: #A9E770; 
 	color:white;
 }
 
-.skill li:nth-child(5){
+.skill li:nth-child(3){
 	background-color: #F09664; 
 	color:white;
+	width: 80%
 }
 
-.skill li:nth-child(7){
+.skill li:nth-child(4){
 	background-color: #46EAD1; 
 	color:white;
+	width: 70%
 }
 
-.skill li:nth-child(9){
+.skill li:nth-child(5){
 	background-color: #A88CE3; 
 	color:white;
+	width: 90%
 }
 
-.XXXXX{
-	background-color: #E26968;
+#skills .row{
+margin-top: 50px;
+margin-bottom: 100px;
 }
 
-.XXXXX ul{
-	margin: 0;
-  padding: 50px;
-  font-size: 30px;
+.red	{
+	background-color:#E26968;
+	padding: 20px;
 }
 
-.XXXXX li{
-	list-style-type: none;
-	float: left;
-	padding-right: 5em;
-  padding-left: 2em;
+.red p {
+	text-align: center;
+	color: white;
 }
 
-.clearfix{
-	clear:both;
+.red p:nth-child(1) {
+	font-size:50px;
 }
 
-.GGGGG{
+
+
+
+
+
 	
-	background-color: #26272B;
-	padding: 50px;
-	padding-bottom: 200px;
-}
-
-/*.GGGGG p{
-	margin: 0;
-}*/
-
-.text-container{
-	width: 50%;
-	float:left;
-}
-
-.pic-container {
-	width: 50%;
-	float: right;
-}
-
-.col-33 img{
-	float: left;
-	padding-right: 10px;
-}
-
-.clearfix{
-	clear:both;
-}
-
-
-
-
-.manyli-container{
-	display: inline-block;
-	padding-right:3em;
-	padding-left: 8em; 
-}
-
-
-
-
-
-
-
-
-
-
-
-.col-2 img{
-
-	width: 100%;
-	height: auto;
-}
-
-.col-2{
-	width: 20%;
-	float: left;
-}
-
-.block1 p{
-	width: 100%;
-	height: 150px;
-	text-align: center;
-}
-
-.block1 a{
-	color: white;
-  text-decoration: none;
-  border-style:groove;
-}
-
-.block1 {
-	width: 33.33333333%;
-	float: left;
-	background-color: #4E449A;
-	color:white;
-}
-
-
-.block2 p{
-	width: 100%;
-	height: 150px;
-	text-align: center;
-}
-
-.block2 a{
-	color: white;
-  text-decoration: none;
-  border-style:groove;
-}
-
-.block2 {
-	width: 33.333333333%;
-	float: left;
-	background-color:#63D9FF;
-	color:white;
-}
-
-.block3 p{
-	width: 100%;
-	height: 150px;
-	text-align: center;
-}
-
-.block3 a{
-	color: white;
-  text-decoration: none;
-  border-style:groove;
-}
-.block3 {
-	width: 33.33333333%;
-	float: left;
-	background-color: #ABD373;
-	color:white;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-#footer {
-	padding: 600px 0;
-}
-
-ul.social-media {
-	margin: 0;
-	padding-left: 0;
-	list-style-type: none;
-}
-
-.social-media li {
-	float: left;
-	margin-right: 10px;
-	padding: 8px 6px;
-	border-radius: 50%;
-}
-
-.social-media a {
-	color: white;
-}
-
-.social-media li.rss {
-	background-color: #FFAB02;
-}
-
-.social-media li.twitter {
-	background-color: #00B6F6;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
